@@ -1435,15 +1435,6 @@ static void _set_options(int argc, char **argv)
 						&opt.min_threads_per_core,
 						NULL, true );
 			break;
-		case LONG_OPT_HINT:
-			if (verify_hint(optarg,
-					&opt.min_sockets_per_node,
-					&opt.min_cores_per_socket,
-					&opt.min_threads_per_core,
-					&opt.cpu_bind_type)) {
-				exit(error_exit);
-			}
-			break;
 		case LONG_OPT_NTASKSPERNODE:
 			opt.ntasks_per_node = _get_int(optarg,
 				"ntasks-per-node");
@@ -1461,6 +1452,17 @@ static void _set_options(int argc, char **argv)
 				"ntasks-per-core");
 			setenvf(NULL, "SLURM_NTASKS_PER_CORE", "%d",
 				opt.ntasks_per_socket);
+			break;
+		case LONG_OPT_HINT:
+			/* Keep after other options filled in */
+			if (verify_hint(optarg,
+					&opt.min_sockets_per_node,
+					&opt.min_cores_per_socket,
+					&opt.min_threads_per_core,
+					&opt.ntasks_per_core,
+					&opt.cpu_bind_type)) {
+				exit(error_exit);
+			}
 			break;
 		case LONG_OPT_BLRTS_IMAGE:
 			xfree(opt.blrtsimage);
