@@ -104,7 +104,7 @@ typedef struct srun_options {
 	int32_t min_threads_per_core; /* --threads-per-core=n      */
 	int32_t ntasks_per_node;   /* --ntasks-per-node=n	*/
 	int32_t ntasks_per_socket; /* --ntasks-per-socket=n	*/
-	int32_t ntasks_per_core;   /* --ntasks-per-core=n	*/
+	int ntasks_per_core;	/* --ntasks-per-core=n		*/
 	cpu_bind_type_t cpu_bind_type; /* --cpu_bind=           */
 	char *cpu_bind;		/* binding map for map/mask_cpu */
 	mem_bind_type_t mem_bind_type; /* --mem_bind=		*/
